change on divide cards