@@ -11,33 +11,31 @@ import java.util.Collections;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class Set implements Runnable {
-    // player
+    private static final Logger logger = Logger.getLogger(Set.class.getName());
+
     private final Player[] players;
     private final int numberOfPlayers;
-
-    // property of ruler
     private final Player ruler;
     private Card.Suit rule;
 
-    // teams
     private final ArrayList<Team> teams;
     private final int[] scoresOfTeams;
     private final int[] scoresOfPlayers;
     private int round;
     private final ArrayList<Card> onTableCards = new ArrayList<>();
 
-    // concurrency
     private final Lock setLock = new ReentrantLock();
     private final Condition ruleSelected = setLock.newCondition();
     private final Condition turnCondition = setLock.newCondition();
     private int currentPlayerIndex;
 
-    // result of the game
     private Team winner;
 
-    public  Team getWinner() {
+    public Team getWinner() {
         return winner;
     }
 
@@ -47,51 +45,39 @@ public class Set implements Runnable {
         this.teams = teams;
 
         this.scoresOfTeams = new int[teams.size()];
-        for (int i = 0; i < teams.size(); i++) {
-            scoresOfTeams[i] = 0;
-        }
+        Arrays.fill(scoresOfTeams, 0);
 
         this.scoresOfPlayers = new int[numberOfPlayers];
-        for (int i = 0; i < numberOfPlayers; i++) {
-            scoresOfPlayers[i] = 0;
-        }
+        Arrays.fill(scoresOfPlayers, 0);
 
-        // determine ruler
         int indexOfRuler = new SecureRandom().nextInt(0, numberOfPlayers);
         this.ruler = players[indexOfRuler];
         this.ruler.setRuler(true);
 
-        // to put ruler in first turn
         Collections.rotate(Arrays.asList(players), 4 - indexOfRuler);
-        System.out.println(Arrays.toString(players));
+        logger.info("Set created with ruler: " + ruler.getName());
     }
 
     @Override
     public void run() {
-        // specify ruler
         sendData("ruler:" + ruler.getId());
-
-        // divide cards
         divideCards();
 
         while (scoresOfTeams[0] < 7 && scoresOfTeams[1] < 7) {
-            // start the round
             sendData("round:" + ++round);
             playRound();
         }
 
-        // determine the winner of the set and send it
         if (scoresOfTeams[0] == 7) {
-            winner = teams.getFirst();
+            winner = teams.get(0);
             sendData("winner set:team1");
         } else {
-            winner = teams.getLast();
+            winner = teams.get(1);
             sendData("winner set:team2");
         }
     }
 
     private void divideCards() {
-        // devide cards btw users and send them to users
         Card[][] cards = GameService.divideCards(numberOfPlayers);
 
         if (numberOfPlayers == 4) {
@@ -99,26 +85,21 @@ public class Set implements Runnable {
                 players[i].setCards(Arrays.asList(cards[i]));
             }
 
-            // set 5 first 5 cards of ruler
             ruler.setCards(Arrays.asList(cards[0]).subList(0, 5));
 
-            // Wait for ruler to select the rule
             setLock.lock();
             try {
                 while (rule == null) {
                     ruleSelected.await();
                 }
-                // After the rule is selected, send all the cards to the ruler
                 ruler.setCards(Arrays.asList(cards[0]));
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
-                System.err.println("Thread interrupted while waiting for rule selection: " +
-                        e.getMessage());
+                logger.log(Level.SEVERE, "Thread interrupted while waiting for rule selection: " + e.getMessage());
             } finally {
                 setLock.unlock();
             }
 
-            // send the rule of the game
             sendData("rule:" + rule);
         } else if (players.length == 2) {
             // determine player that is not ruler
@@ -129,56 +110,64 @@ public class Set implements Runnable {
 
             player1.start();
             player2.start();
+            sendData("divide cards");
+            for (int i = 0; i < 2; i++) {
+                Player currentPlayer = players[i];
+                for (int j = 0; j < 5; j++) {
+                    sendData(cards[i][j], currentPlayer);
+                }
+                if (currentPlayer.equals(ruler)) {
+                    sendData("Choose games rule");
+                    try {
+                        currentPlayer.getInput().readObject();
+                    } catch (Exception e) {
+                        logger.log(Level.SEVERE, "Error reading rule selection: " + e.getMessage());
+                    }
+                }
+            }
         }
     }
 
     private void playRound() {
-        // they should play cards
         for (int i = 0; i < numberOfPlayers; i++) {
             setLock.lock();
             try {
                 currentPlayerIndex = i;
                 turnCondition.signalAll();
 
-                // get cards from the current player
                 sendData("turn" + (i + 1) + ":" + players[currentPlayerIndex].getId());
                 Card playedCard = players[i].playCard();
-                System.out.println("Player " + players[i].getId() + " played: " + playedCard);
+                logger.info("Player " + players[i].getName() + " played: " + playedCard);
                 onTableCards.add(playedCard);
 
-                // send played card
                 sendData("on table card:" + players[currentPlayerIndex].getId());
                 sendData(playedCard);
 
-                // change the turn
                 currentPlayerIndex++;
                 while (currentPlayerIndex == i) {
                     turnCondition.await();
                 }
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
-                System.err.println("Thread interrupted during playRound: " + e.getMessage());
+                logger.log(Level.SEVERE, "Thread interrupted during playRound: " + e.getMessage());
             } finally {
                 setLock.unlock();
             }
         }
 
-        // determine the winner of the round
         Card winCard = GameService.topCard(onTableCards, rule);
         int indexOfWinner = onTableCards.indexOf(winCard);
         Player winner = players[indexOfWinner];
 
-        // increase score of the winner and winner team
         scoresOfPlayers[indexOfWinner]++;
-        if (teams.getFirst().getPlayers().contains(winner))
+        if (teams.get(0).getPlayers().contains(winner)) {
             scoresOfTeams[0]++;
-        else
+        } else {
             scoresOfTeams[1]++;
+        }
 
-        // send the winner to client
         sendData("winner round:" + winner.getId().toString());
 
-        // initial again
         onTableCards.clear();
         currentPlayerIndex = 0;
     }
